# Diffusive-Shock-Acceleration

./: .gitignore  CITATION.cff  Makefile.am  README.md  configure.ac  configure.sh
common/: matrix.hh
runs/: dsa_backward.cc  dsa_backward_postprocess.cc  dsa_common.hh  dsa_plots.py  fit_spectrum.py
runs_planar_shock/: Makefile.am  dsa_analytic.cc  dsa_backward.cc  dsa_backward_postprocess.cc  dsa_common.hh  dsa_dmax_plot.py  dsa_forward.cc  dsa_forward_postprocess.cc  dsa_plots.py
runs_planar_shock_acc/: Makefile.am  dsa_analytic.cc  dsa_common.hh  dsa_compare_splitting_likelihood.py  dsa_forward_acc.cc  dsa_likelihood_expectation.cc  dsa_likelihood_expectation_FD.cc  dsa_likelihood_expectation_FD_MPI.cc  dsa_plot_acc.py  dsa_plot_likelihood.py  dsa_plot_likelihood_FD.py  dsa_plots_acc.py  plot_likelihood.py
runs_spherical_shock/: Makefile.am  dsa_analytic.cc  dsa_backward.cc  dsa_backward_no_source.cc  dsa_backward_postprocess.cc  dsa_backward_postprocess_no_source.cc  dsa_common.hh  dsa_forward.cc  dsa_forward_postprocess.cc  dsa_plot_background.cc  dsa_plots.py
src/: background_smooth_shock.cc  background_smooth_shock.hh  background_solarwind.cc  background_solarwind.hh  background_solarwind_termshock.cc  background_solarwind_termshock.hh  boundary_momentum.cc  boundary_momentum.hh  diffusion_other.cc  diffusion_other.hh  distribution_other.cc  distribution_other.hh  distribution_templated.cc  simulation.cc  simulation.hh  source_base.cc  source_other.cc  source_other.hh  trajectory_base.cc  trajectory_base.hh  trajectory_parker.cc  trajectory_parker.hh
